{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 114,
  "lineage": "6c6148af-d173-bb86-4233-18bdb8be7e10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bedrock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:internet-gateway/igw-0c441c334f410935b",
            "id": "igw-0c441c334f410935b",
            "owner_id": "947808342964",
            "tags": {
              "Name": "bedrock-igw"
            },
            "tags_all": {
              "Name": "bedrock-igw"
            },
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:route-table/rtb-05d6532f0d42da552",
            "id": "rtb-05d6532f0d42da552",
            "owner_id": "947808342964",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bedrock-app-rt"
            },
            "tags_all": {
              "Name": "bedrock-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:route-table/rtb-07ae4553dc41fa399",
            "id": "rtb-07ae4553dc41fa399",
            "owner_id": "947808342964",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bedrock-db-rt"
            },
            "tags_all": {
              "Name": "bedrock-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:route-table/rtb-0c7e2c8a4b4650405",
            "id": "rtb-0c7e2c8a4b4650405",
            "owner_id": "947808342964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c441c334f410935b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bedrock-public-rt"
            },
            "tags_all": {
              "Name": "bedrock-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bedrock_igw",
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b774731bbeccf04",
            "route_table_id": "rtb-05d6532f0d42da552",
            "subnet_id": "subnet-07452ffe038ffeddb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.app_rt",
            "aws_subnet.app_subnet",
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d812563f7f01d1bf",
            "route_table_id": "rtb-07ae4553dc41fa399",
            "subnet_id": "subnet-0bf53ad03f376ead0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.db_subnet",
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf165c0cb17cc0fc",
            "route_table_id": "rtb-0c7e2c8a4b4650405",
            "subnet_id": "subnet-0bab9050a0ba54458"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bedrock_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_a",
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0945643b7953b519b",
            "route_table_id": "rtb-0c7e2c8a4b4650405",
            "subnet_id": "subnet-07c88d6551831afa7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bedrock_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_b",
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:subnet/subnet-07452ffe038ffeddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07452ffe038ffeddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947808342964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bedrock-app-subnet"
            },
            "tags_all": {
              "Name": "bedrock-app-subnet"
            },
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:subnet/subnet-0bf53ad03f376ead0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf53ad03f376ead0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947808342964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bedrock-db-subnet"
            },
            "tags_all": {
              "Name": "bedrock-db-subnet"
            },
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:subnet/subnet-0bab9050a0ba54458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bab9050a0ba54458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947808342964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bedrock-public-subnet-a"
            },
            "tags_all": {
              "Name": "bedrock-public-subnet-a"
            },
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:subnet/subnet-07c88d6551831afa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c88d6551831afa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947808342964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bedrock-public-subnet-b"
            },
            "tags_all": {
              "Name": "bedrock-public-subnet-b"
            },
            "vpc_id": "vpc-010786dc57c590f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bedrock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bedrock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947808342964:vpc/vpc-010786dc57c590f34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-038b9773c08f8f1a5",
            "default_route_table_id": "rtb-078125c48ecda9f67",
            "default_security_group_id": "sg-0315d771bd87f0b7b",
            "dhcp_options_id": "dopt-0ae8dc540a4cd363b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010786dc57c590f34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078125c48ecda9f67",
            "owner_id": "947808342964",
            "tags": {
              "Name": "bedrock-vpc"
            },
            "tags_all": {
              "Name": "bedrock-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}